# PPT

./: .gitignore  LICENSE  README.md
GPUs-Energy/: README.md
GPUs-Energy/Instructions_Microbenchmarks/: Makefile  README.md  device_functions.cu  nonOpt_pipeline_temp.ptx  opt_pipeline_temp.ptx  pipeline.cu  run.sh
GPUs-Energy/MTSM/: Makefile  README.md  libcuhook.cpp  libcuhook.h
GPUs-Energy/MTSM/Benchmarks/: 2DConvolution.cu  2mm.cu  vectorAdd.cu
GPUs-Energy/PAPI/: Makefile  README.md  pipeline.cu
GPUs-Energy/SMA/: Makefile  README.md  power_monitor.c
PPT-GPU/: .gitignore  README.md  dependencies  ppt.py  simian.py
PPT-GPU/ISA_parser/: ptx_parser.py  sass_parser.py
PPT-GPU/hardware/: TITANRTX.py  TITANV.py
PPT-GPU/hardware/ISA/: Maxwell.py  Pascal.py  Turing.py  Volta.py
PPT-GPU/hardware/compute_capability/: 35.py  37.py  52.py  53.py  60.py  75.py
PPT-GPU/llvm_tool/: Readme.md
PPT-GPU/llvm_tool/inc/: cudaFluxPasses.h  deviceRuntime.h  hostRuntime.h
PPT-GPU/llvm_tool/utils/: clang_cf++  modulefile  parseRegisterUsage.py
PPT-GPU/reuse_distance_tool/: README.md  main.c  makefile  narray.c  narray.h  parda.c  parda.h  parda_omp.c  parda_omp.h  parda_print.c  process_args.c  process_args.h  seperate.c  seperate.h  splay.c  splay.h
PPT-GPU/src/: accelerators.py  blocks.py  helper_methods.py  kernels.py  memory_model.py  warp_scheduler.py  warps.py
PPT-GPU/tracing_tool/: Makefile  README.md  common.h  inject_funcs.cu  tracer.cu
PPT-GPU/tracing_tool/nvbit/: cuda.h  generated_cuda_meta.h  instr_types.h  nvbit.h  nvbit_reg_rw.h  nvbit_tool.h  tools_cuda_api_meta.h
code/: ppt.py
code/ABF/: README.txt  cfg.dot  parseTrace-perFunction.lua  parseTrace.lua  prob_simple_loop.lua  probabilities.lua
code/ABF/IRStaticTrace/: Makefile  bcRead.cpp  blackscholes.O3.llvm  blackscholes.O3.trace  blackscholes.trace  count.lua
code/ABF/reuse/: phit.py  reuse_profile_bb_i_Ver6.py  reuse_profile_bb_i_shared_mem_Ver1.py  reuse_profile_bb_i_shared_mem_Ver2.py  reuse_profile_each_bb.py  split_trace.py
code/ABF/simpleExample/: Makefile
code/apps/CloverSim/: cloversim-mpi.py
code/apps/PPT-GPU/: PTXParser.py  README.md  apps_example.text  apps_example.txt  gpu_app.py  perf.0.out
code/apps/STREAMsim/: mmSim.0.out  stream_sim.py
code/apps/blackscholesSim/: blackscholes_sim.py
code/apps/cwbjsim/: cwbjsim-mpi.py  cwbjsim-orig.0.out  cwbjsim-orig.py
code/apps/ferretSim/: ferret_sim.py
code/apps/fluidanimateSim/: fluidanimate_sim.py
code/apps/gpu_tests/: GPUTest.0.out  GPUTest.py  README.md
code/apps/helloworld/: helloworld.0.out  helloworld.py  inherit_var_change.py
code/apps/hplsim/: blassim.py  hplauxil.py  hplobjects.py  hplpdupdate.py  hplsim-mpi.py  hpltimecompute.py  run.py
code/apps/imcsim/: IMCSim-mpi.py  IMCSim-mpiwarp.py  IMCSim-mpiwarpV4_hw.py  IMCSim.py  imc_fun.py  imcsim.0.out  particle_pass.py  runtime_comparison.xlsx  scale_test.py  scale_testSTEV21.py
code/apps/imcsim/branson/src/: CMakeLists.txt  RNG.h  buffer.h  cell.h  census_creation.h  completion_manager.h  completion_manager_milagro.h  completion_manager_rma.h  config.h.in  constants.h  decompose_mesh.h  decompose_photons.h  imc_drivers.h  imc_parameters.h  imc_state.h  info.h  input.h  load_balance.h  main.cc  mesh.h  mesh_request_manager.h  mesh_rma_manager.h  message_counter.h  mpi_types.h  photon.h  region.h  remap_census.h  sampling_functions.h  source.h  tally_manager.h  tally_manager_rma.h  timer.h  transport_mesh_pass.h  transport_mesh_pass_rma.h  transport_particle_pass.h  work_packet.h  write_silo.h
code/apps/imcsim/branson/src/test/: .CMakeLists.txt.swp  CMakeLists.txt  large_particle_input.xml  simple_input.xml  test_buffer.cc  test_cell.cc  test_completion_manager.cc  test_imc_state.cc  test_input.cc  test_mesh.cc  test_mpi_types.cc  test_parmetis.cc  test_photon.cc  test_remap_census.cc  test_tally_manager.cc  test_work_packet.cc  test_write_silo.cc  testing_functions.h  three_region_mesh_input.xml
code/apps/mdsim/: mdsim-mpi.py  mdsim.py
code/apps/mmsim/: mmSim.0.out  mm_sim.py  snapsim.0.out
code/apps/mpi_tests/: allreduce-bypass-nompi.py  allreduce-bypass.py  allreduce-nompi.py  allreduce.py  bandwidth-meter-nompi.py  bandwidth_meter.py  cannon-nompi.py  cannon.py  getlat-nompi.py  getlat.py  helloworld-nompi.py  helloworld.py  point2point-nompi.py  (+6 more)
code/hardware/: accelerators.py  cluster.py  clusters.py  node.py  nodes.py  phitsmodel_processors.py  processors.py  processors.sav  processors_new.py
data/: README.txt
data/app_runs/: polybench_HSW_20_2_MEM128.0_10GbE_20151110.csv  polybench_HSW_32_2_MEM128.0_10GbE_20151110.csv  polybench_HSW_72_4_MEM512.0_10GbE_20151110.csv  polybench_SAND_16_2_MEM64.0_Accelerator-1_TeslaK40c_10GbE_20151110.csv  polybench_byfl_20151028.csv  polybench_ccs6_20151110.csv  polybench_dl980_20151110.csv  polybench_irf_20151028.csv  polybench_mustang_20151028.csv  polybench_mustang_20151110.csv  polybench_vortex_20151110.csv
data/hw_specs/: HSW_20_2_MEM128.0_10GbE_specs.txt  HSW_32_2_MEM128.0_10GbE_specs.txt  HSW_72_4_MEM512.0_10GbE_specs.txt  IVY_16_2_MEM128.0_Accelerator-1_QuadroK6000_10GbE_specs.txt  SAND_16_2_MEM64.0_Accelerator-1_TeslaK40c_10GbE_specs.txt  ccs6_specs.txt  dl980_specs.txt  mustang_specs.txt  vortex_specs.txt
ppt_lite/: README.md  ppt.py  simian.py
ppt_lite/hardware/: AMDbobcat.py  AMDbulldozer.py  AMDexcavator.py  AMDjaguar.py  AMDpiledriver.py  AMDryzen.py  AMDsteamroller.py  broadwell.py  goldmont.py  goldmontPlus.py  haswell.py  ivybridge.py  knl.py  merom.py  nehalem.py  play_hw.py  sandybridge.py  silvermont.py  skylake-X.py  skylake.py  wolfdale.py
scripts/: run_polybench_generic_2015_10_28.tar.bz2
scripts/Basic-Block-Counter/: CMakeLists.txt  README.md  adder.cpp  adder.h  bb-counter-rt.c  build.sh  simple.cpp
scripts/parse_output_2015_11_17/: parse_byfl.sh
scripts/run_polybench_generic_2015_10_28/: README.txt  check_output.sh  cleanup_scripts.sh  counters.txt  gen_script_papi.sh  gen_script_time.sh  programlist.txt  runpapi.sh  runtime.sh  runtime_1.sh  runtime_2.sh  submit_job.sh
(+521 files in other folders)
